resetting cpp baseline to be the c templates

--- a/src/nunavut/lang/cpp/templates/ServiceType.j2
+++ b/src/nunavut/lang/cpp/templates/ServiceType.j2
@@ -1,10 +1,20 @@
-{% extends "Header.j2" %}
-{%- block object -%}
-{{ T | definition_begin }}
-{
-{% set composite_type = T.request_type -%}
-{% include '_composite_type.j2' %}
-{% set composite_type = T.response_type -%}
-{% include '_composite_type.j2' %}
-}{{ T | definition_end }}
-{% endblock -%}
+{#-
+ # Copyright 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+ # Copyright (C) 2020  UAVCAN Development Team  <uavcan.org>
+ # This software is distributed under the terms of the MIT License.
+ # Authors: David Lenfesty, Scott Dixon <dixonsco@amazon.com>, Pavel Kirienko <pavel@uavcan.org>,
+ #          Peter van der Perk <peter.vanderperk@nxp.com>
+-#}
+
+{% extends "base.j2" %}
+{% block contents %}
+
+{% from 'definitions.j2' import generate_metadata, generate_composite %}
+
+{{ generate_metadata(T) }}
+
+{{ generate_composite(T.request_type) }}
+
+{{ generate_composite(T.response_type) }}
+
+{% endblock %}
