--- a/src/nunavut/lang/cpp/templates/definitions.j2
+++ b/src/nunavut/lang/cpp/templates/definitions.j2
@@ -211,13 +211,13 @@ static inline {{ typename_error_type }} {{ t | full_reference_name }}_deserializ
     {{ deserialize(t) | trim }}
 }
 
-/// Initialize an instance to default values. Does nothing if @param out_obj is {{ valuetoken_null }}.
+/// Initialize an instance to default values. Does nothing if @param out_obj is nullptr.
 /// This function intentionally leaves inactive elements uninitialized; for example, members of a variable-length
 /// array beyond its length are left uninitialized; aliased union memory that is not used by the first union field
 /// is left uninitialized, etc. If full zero-initialization is desired, just use memset(&obj, 0, sizeof(obj)).
 static inline void {{ t | full_reference_name }}_initialize_({{ t | full_reference_name }}* const out_obj)
 {
-    if (out_obj != {{ valuetoken_null }})
+    if (out_obj != nullptr)
     {
         {{ typename_unsigned_length }} size_bytes = 0;
         const {{ typename_byte }} buf = 0;
@@ -231,21 +231,21 @@ static inline void {{ t | full_reference_name }}_initialize_({{ t | full_referen
 
 {% for f in t.fields_except_padding %}
 {% if t.inner_type is UnionType %}
-/// Mark option "{{ f.name }}" active without initializing it. Does nothing if @param obj is {{ valuetoken_null }}.
+/// Mark option "{{ f.name }}" active without initializing it. Does nothing if @param obj is nullptr}.
 static inline void {{ t | full_reference_name }}_select_{{ f.name }}_{# -#}
                   ({{ t | full_reference_name }}* const obj)
 {
-    if (obj != {{valuetoken_null}})
+    if (obj != nullptr)
     {
         obj->_tag_ = {{ loop.index0 }};
     }
 }
 
-/// Check if option "{{ f.name }}" is active. Returns false if @param obj is {{ valuetoken_null }}.
+/// Check if option "{{ f.name }}" is active. Returns false if @param obj is nullptr }}.
 static inline {{ typename_boolean }} {{ t | full_reference_name }}_is_{{ f.name }}_{# -#}
                               (const {{ t | full_reference_name }}* const obj)
 {
-    return ((obj != {{ valuetoken_null }}) && (obj->_tag_ == {{ loop.index0 }}));
+    return ((obj != nullptr) && (obj->_tag_ == {{ loop.index0 }}));
 }
 {% endif %}
 {% endfor %}
