--- a/src/nunavut/lang/cpp/templates/serialization.j2
+++ b/src/nunavut/lang/cpp/templates/serialization.j2
@@ -11,8 +11,8 @@
 
 {# ----------------------------------------------------------------------------------------------------------------- #}
 {% macro serialize(t) %}
-    if ((obj == {{ valuetoken_null }}) || (buffer == {{ valuetoken_null }}) || {# -#}
-        (inout_buffer_size_bytes == {{ valuetoken_null }}))
+    if ((obj == nullptr) || (buffer == nullptr) || {# -#}
+        (inout_buffer_size_bytes == nullptr))
     {
         return -NUNAVUT_ERROR_INVALID_ARGUMENT;
     }
