--- a/src/nunavut/lang/cpp/templates/StructureType.j2
+++ b/src/nunavut/lang/cpp/templates/StructureType.j2
@@ -3,8 +3,7 @@
  # Copyright (C) 2021  UAVCAN Development Team  <uavcan.org>
  # This software is distributed under the terms of the MIT License.
 -#}
-{% extends "base.j2" %}
+{%- extends "base.j2" %}
 {%- block object -%}
-{% set composite_type = T -%}
-{% include '_composite_type.j2' %}
-{% endblock -%}
+{% set composite_type = T %}{% include '_composite_type.j2' %}
+{%- endblock -%}
