--- a/src/nunavut/lang/cpp/templates/_fields_as_union.j2
+++ b/src/nunavut/lang/cpp/templates/_fields_as_union.j2
@@ -1,3 +1,8 @@
+{#-
+ # Copyright 2021 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+ # Copyright (C) 2021  UAVCAN Development Team  <uavcan.org>
+ # This software is distributed under the terms of the MIT License.
+#}
     union // The union is placed first to ensure that the active element address equals the object address.
     {
 {%- for field in composite_type.fields -%}
@@ -14,4 +19,4 @@ public:
     bool {{ ('is' + field.name.capitalize())  | id }}() const { return (tag_ == {{ loop.index0 }}); }
     void {{ ('select' + field.name.capitalize())  | id }}() { tag_ = {{ loop.index0 }}; }
 {%- endif -%}
-{%- endfor %}
+{%- endfor-%}
