--- a/src/nunavut/lang/cpp/templates/_composite_type.j2
+++ b/src/nunavut/lang/cpp/templates/_composite_type.j2
@@ -32,6 +32,7 @@
     {{ typename_unsigned_length }} serialize(std::size_t todo_ser = 0)
     {
         // TODO: implement this routine
+        (void)todo_ser;
         return 0;
     }
 {%- endif %}
